# covis

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENCE  README.md  index.html  pyproject.toml
covis/: __init__.py  core.py  plot_choro.py  utils.py
covis/tests/: test_core.py  test_utils.py
data/: overview_2023-05-25.csv  region_2023-05-25_rate_28days.csv  total_deaths_per_week_2017-2023.csv
doc/: conf.py  index.rst
doc/modules/: _public.rst  core.rst  utils.rst
doc/setup/: install.rst  pytest.rst
lfs/: choro_slider.html
notebooks/: 00_total_weekly_deaths.ipynb  01_geojson.ipynb  02_regional_data.ipynb  03_age_data.ipynb  04_traffic_correlation.ipynb  05_choro_interact.ipynb  07_rose.ipynb  08_threshold_plot.ipynb
notebooks/scrap/: 06_choro_interact.ipynb  08_threshold_plot-pres.ipynb
output/: EWgeo.pkl  covid19_weekly_regional_deaths_2020-2022.csv  eer_dict.json  eng_geojson.json  england_and_wales_weekly_covid19_non-covid19.csv  long_form_regional_weekly_deaths.csv  rose_causes.html  total_covid19_by_age_march-may_2020.csv  total_covid19_by_age_sex_march-may_2020_long.csv  total_weekly_regional_deaths_2020-2022.csv  traffic_correlation.txt  traffic_correlation_test.txt  wal_geojson.json  yearly_regional_covid19_death_summary_2020-2022.csv  yearly_regional_covid19_death_summary_2020-2022_geometry.csv
