[tool.poetry]
name = "covis"
version = "0.0.0"
description = "Written by the Hartree Centre Data Science group"
authors = ["Paul Edwards <paul.edwards@stfc.ac.uk>"]
license = "MIT license"
homepage = "https://gitlab.stfc.ac.uk/pauledwards/covis"

[tool.poetry.dependencies]
python = "~3.10.9"
sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
pandas = "^1.3.4"
numpy = "^1.21.4"
toml = "^0.10.2"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
openpyxl = "^3.1.2"
xlrd = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
nbstripout = "^0.6.1"
geopandas = "^0.13.0"
pyarrow = "^12.0.0"
varname = "^0.11.1"
holoviews = "^1.16.0"
hvplot = "^0.8.3"
plotly = "^5.14.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.12.0"
mypy = "^0.991"
mypy-extensions = "^0.4.3"
pre-commit = "^2.15.0"
hooks = {git = "https://github.com/stfc/pre-commit-hooks", tag = "v0.3.4"}
pylint = "2.15.10"
regex = "^2021.11.2"
tox = "^3.24.4"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "pandas",
    "numpy",
    "toml",
    ]

ignore_missing_imports = true

[tool.pylint.master]
persistent="yes"

[tool.pylint.messages_control]
max-line-length = 88
disable = ["wrong-hanging-indentation", "bad-whitespace",]
output-format = "colorized"

[tool.pylint.basic]
good-names = ["i", "j", "k", "e", "df", "n", "t",]

[tool.isort]
profile = "black"
skip = ["build_seq.py", "conf.py"]
float_to_top = true

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py310, clean

[testenv:py310]
whitelist_externals = poetry
passenv = RUNNER PLATFORM_ENVVAR
commands =
    poetry install -v
    poetry run pytest --cov-report xml:coverage.xml covis/tests/ --cov --cov-append -vv

[testenv:clean]
deps = coverage
skip_install = true
commands =
    coverage report
    coverage erase
"""

[tool.poetry-dynamic-versioning]
enable = true
